syntax = "proto3";

option go_package = "dtu.com/grpc/golang/special_course/protos";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  string surname = 2;
}

message HelloReply {
  string message = 1;
}
